--- a/pretreatment.ipynb
+++ b/pretreatment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "8ceefa27",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "575cc346",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "848cc6cc",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "21f313cb",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "a84e90cc",
    "metadata": {
     "scrolled": true
@@ -234,7 +234,7 @@
        "4    man        True  NaN  Southampton    no   True  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "fe4cf2ba",
    "metadata": {
     "scrolled": true
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "6dd8aae8",
    "metadata": {
     "scrolled": false
@@ -316,7 +316,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "055937ab",
    "metadata": {
     "scrolled": true
@@ -354,7 +354,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "d6f5e5ed",
    "metadata": {
     "scrolled": true
@@ -392,7 +392,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -417,7 +417,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cd7a6840",
    "metadata": {},
    "outputs": [],
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "8ad77d26",
    "metadata": {
     "scrolled": true
@@ -491,7 +491,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "24913195",
    "metadata": {},
    "outputs": [
@@ -779,7 +779,7 @@
        "[203 rows x 15 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -789,7 +789,7 @@
        "0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -799,7 +799,7 @@
        "688"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "71854850",
    "metadata": {
     "scrolled": true
@@ -1080,7 +1080,7 @@
        "[891 rows x 14 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "49964636",
    "metadata": {
     "scrolled": true
@@ -1371,7 +1371,7 @@
        "[714 rows x 15 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d74d236d",
    "metadata": {},
    "outputs": [],
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "b8a79139",
    "metadata": {
     "scrolled": true
@@ -1429,7 +1429,7 @@
        "29.69911764705882"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1439,7 +1439,7 @@
        "177"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1459,7 +1459,7 @@
        "Name: age, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1479,7 +1479,7 @@
        "Name: age, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "a231ffb9",
    "metadata": {
     "scrolled": true
@@ -1507,7 +1507,7 @@
        "28.0"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1527,7 +1527,7 @@
        "Name: age, dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "id": "782c8058",
    "metadata": {
     "scrolled": true
@@ -1564,7 +1564,7 @@
        "Name: age, Length: 88, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1584,7 +1584,7 @@
        "Name: age, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1594,7 +1594,7 @@
        "24.0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "id": "12a2e6d6",
    "metadata": {
     "scrolled": true
@@ -1704,7 +1704,7 @@
        "829  woman       False    B         NaN   yes   True  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1721,7 +1721,7 @@
        "Name: embark_town, dtype: object"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1738,7 +1738,7 @@
        "Name: embark_town, dtype: object"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1755,7 +1755,7 @@
        "Name: embark_town, dtype: object"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "id": "e1f29d43",
    "metadata": {
     "scrolled": true
@@ -1869,7 +1869,7 @@
        "row6   NaN   NaN   5.0   3.0   NaN"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1890,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "id": "0e14d9a2",
    "metadata": {
     "scrolled": true
@@ -1987,7 +1987,7 @@
        "row6     A     B  5.0   3.0     E"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "id": "f0af3708",
    "metadata": {},
    "outputs": [
@@ -2093,7 +2093,7 @@
        "row6   NaN   NaN   5.0   3.0   3.0"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2114,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "5602d1eb",
    "metadata": {},
    "outputs": [],
@@ -2124,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 24,
    "id": "87b56bf8",
    "metadata": {
     "scrolled": false
@@ -2200,7 +2200,7 @@
        "4  b   2   2"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2214,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
    "id": "3f66e8c9",
    "metadata": {},
    "outputs": [
@@ -2229,7 +2229,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2239,7 +2239,7 @@
        "1"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2251,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 26,
    "id": "343da9c6",
    "metadata": {
     "scrolled": true
@@ -2268,7 +2268,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 27,
    "id": "ef6ef324",
    "metadata": {},
    "outputs": [
@@ -2294,7 +2294,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2305,12 +2305,309 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 28,
    "id": "89702675",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 중복 데이터 제거 "
+    "# 중복 데이터 제거 - drop_duplicates(subset, keep, inplace, ignore_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "725dde71",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>c1</th>\n",
+       "      <th>c2</th>\n",
+       "      <th>c3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>a</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>b</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  c1  c2  c3\n",
+       "0  a   1   1\n",
+       "1  a   1   1\n",
+       "2  b   1   2\n",
+       "3  a   2   2\n",
+       "4  b   2   2"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "24ae57aa",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>c1</th>\n",
+       "      <th>c2</th>\n",
+       "      <th>c3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  c1  c2  c3\n",
+       "0  a   1   1\n",
+       "2  b   1   2"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop_duplicates('c1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "65697589",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>c1</th>\n",
+       "      <th>c2</th>\n",
+       "      <th>c3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>a</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>b</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  c1  c2  c3\n",
+       "3  a   2   2\n",
+       "4  b   2   2"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop_duplicates('c1', keep='last')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "9b69c20e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>c1</th>\n",
+       "      <th>c2</th>\n",
+       "      <th>c3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>a</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>b</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  c1  c2  c3\n",
+       "1  a   1   1\n",
+       "2  b   1   2\n",
+       "3  a   2   2\n",
+       "4  b   2   2"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop_duplicates(['c1','c2'], keep='last')"
    ]
   }
  ],
