--- a/pretreatment2.ipynb
+++ b/pretreatment2.ipynb
@@ -3429,7 +3429,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "6bd33eea",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3444,6 +3446,306 @@
    ],
    "source": [
     "ts_dates.to_period(freq='3H')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d1dc4a3f",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2023-03-01 00:00:00+09:00', '2023-04-01 00:00:00+09:00',\n",
+       "               '2023-05-01 00:00:00+09:00', '2023-06-01 00:00:00+09:00',\n",
+       "               '2023-07-01 00:00:00+09:00', '2023-08-01 00:00:00+09:00'],\n",
+       "              dtype='datetime64[ns, Asia/Seoul]', freq='MS')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 시계열 데이터 생성\n",
+    "# Timestamp 배열 - date_range()함수 사용 \n",
+    "pd.date_range(start='2023-02-02', periods=6, freq='MS', tz='Asia/Seoul')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d3b4260e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2023-02-28', '2023-05-31', '2023-08-31', '2023-11-30',\n",
+       "               '2024-02-29', '2024-05-31'],\n",
+       "              dtype='datetime64[ns]', freq='3M')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.date_range(start='2023-02-02', periods=6, freq='3M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "779ced60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PeriodIndex(['2023-02', '2023-03', '2023-04'], dtype='period[M]')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#period 배열 생성 : period_range() 함수 사용\n",
+    "pd.period_range(start='2023-02-02', periods=3, freq='M')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "104ed0be",
+   "metadata": {},
+   "source": [
+    "### 시계열 데이터 활용\n",
+    "- 날짜 데이터 분리 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "411ae141",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2002-05-23</td>\n",
+       "      <td>1.156429</td>\n",
+       "      <td>1.242857</td>\n",
+       "      <td>1.145714</td>\n",
+       "      <td>1.196429</td>\n",
+       "      <td>1.196429</td>\n",
+       "      <td>104790000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002-05-24</td>\n",
+       "      <td>1.214286</td>\n",
+       "      <td>1.225000</td>\n",
+       "      <td>1.197143</td>\n",
+       "      <td>1.210000</td>\n",
+       "      <td>1.210000</td>\n",
+       "      <td>11104800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2002-05-28</td>\n",
+       "      <td>1.213571</td>\n",
+       "      <td>1.232143</td>\n",
+       "      <td>1.157143</td>\n",
+       "      <td>1.157143</td>\n",
+       "      <td>1.157143</td>\n",
+       "      <td>6609400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2002-05-29</td>\n",
+       "      <td>1.164286</td>\n",
+       "      <td>1.164286</td>\n",
+       "      <td>1.085714</td>\n",
+       "      <td>1.103571</td>\n",
+       "      <td>1.103571</td>\n",
+       "      <td>6757800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2002-05-30</td>\n",
+       "      <td>1.107857</td>\n",
+       "      <td>1.107857</td>\n",
+       "      <td>1.071429</td>\n",
+       "      <td>1.071429</td>\n",
+       "      <td>1.071429</td>\n",
+       "      <td>10154200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date      Open      High       Low     Close  Adj Close     Volume\n",
+       "0  2002-05-23  1.156429  1.242857  1.145714  1.196429   1.196429  104790000\n",
+       "1  2002-05-24  1.214286  1.225000  1.197143  1.210000   1.210000   11104800\n",
+       "2  2002-05-28  1.213571  1.232143  1.157143  1.157143   1.157143    6609400\n",
+       "3  2002-05-29  1.164286  1.164286  1.085714  1.103571   1.103571    6757800\n",
+       "4  2002-05-30  1.107857  1.107857  1.071429  1.071429   1.071429   10154200"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4874 entries, 0 to 4873\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   Date       4874 non-null   object \n",
+      " 1   Open       4874 non-null   float64\n",
+      " 2   High       4874 non-null   float64\n",
+      " 3   Low        4874 non-null   float64\n",
+      " 4   Close      4874 non-null   float64\n",
+      " 5   Adj Close  4874 non-null   float64\n",
+      " 6   Volume     4874 non-null   int64  \n",
+      "dtypes: float64(5), int64(1), object(1)\n",
+      "memory usage: 266.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "stock = pd.read_csv('NFLX.csv')\n",
+    "stock.head()\n",
+    "stock.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "18e5b659",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      2002-05-23\n",
+       "1      2002-05-24\n",
+       "2      2002-05-28\n",
+       "3      2002-05-29\n",
+       "4      2002-05-30\n",
+       "          ...    \n",
+       "4869   2021-09-24\n",
+       "4870   2021-09-27\n",
+       "4871   2021-09-28\n",
+       "4872   2021-09-29\n",
+       "4873   2021-09-30\n",
+       "Name: Date, Length: 4874, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0      2002-05-23\n",
+       "1      2002-05-24\n",
+       "2      2002-05-28\n",
+       "3      2002-05-29\n",
+       "4      2002-05-30\n",
+       "          ...    \n",
+       "4869   2021-09-24\n",
+       "4870   2021-09-27\n",
+       "4871   2021-09-28\n",
+       "4872   2021-09-29\n",
+       "4873   2021-09-30\n",
+       "Name: new_date, Length: 4874, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.to_datetime(stock.Date)\n",
+    "stock['new_date']=pd.to_datetime(stock.Date)\n",
+    "stock.new_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "50e46a5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Date', 'Open', 'High', 'Low', 'Close', 'Adj Close', 'Volume',\n",
+       "       'new_date', 'Year', 'Month', 'Day'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock['Year']=stock.new_date.dt.year\n",
+    "stock['Month']=stock.new_date.dt.month\n",
+    "stock['Day']=stock.new_date.dt.day\n",
+    "stock.columns"
    ]
   }
  ],
