--- a/sosang_ex.ipynb
+++ b/sosang_ex.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "57c50088",
    "metadata": {},
    "outputs": [],
@@ -835,6 +835,20 @@
     {
      "data": {
       "text/plain": [
+       "['plot_practice.ipynb',\n",
+       " 'pretreatment.ipynb',\n",
+       " 'pretreatment2.ipynb',\n",
+       " 'multi_index.ipynb',\n",
+       " 'sosang_ex.ipynb']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
        "['users.txt']"
       ]
      },
@@ -990,19 +1004,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4077/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4214/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  temp = pd.read_csv(file_name, encoding = 'utf-8')\n",
-      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4077/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4214/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  temp = pd.read_csv(file_name, encoding = 'utf-8')\n",
-      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4077/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4214/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  temp = pd.read_csv(file_name, encoding = 'utf-8')\n",
-      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4077/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4214/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  temp = pd.read_csv(file_name, encoding = 'utf-8')\n",
-      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4077/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4214/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  temp = pd.read_csv(file_name, encoding = 'utf-8')\n",
-      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4077/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4214/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  temp = pd.read_csv(file_name, encoding = 'utf-8')\n",
-      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4077/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_4214/163632040.py:6: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  temp = pd.read_csv(file_name, encoding = 'utf-8')\n"
      ]
     }
@@ -2076,7 +2090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "a538200c",
    "metadata": {},
    "outputs": [
@@ -2086,7 +2100,7 @@
        "98782203"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2096,7 +2110,7 @@
        "(2532877, 39)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2108,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "b120b4d7",
    "metadata": {
     "scrolled": true
@@ -2159,7 +2173,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2170,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "f64189ed",
    "metadata": {
     "scrolled": true
@@ -2388,7 +2402,7 @@
        "[2532877 rows x 10 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2403,7 +2417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "49973681",
    "metadata": {
     "scrolled": true
@@ -2473,7 +2487,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#새로 생성한 데이터 프레임을 csv 파일로 저장"
+    "#새로 생성한 데이터 프레임을 csv 파일로 저장\n",
+    "total.to_csv('sosang_store/total_store.csv', encoding = 'utf-8')\n",
+    "data.to_csv('sosang_store/data_store.csv', encoding = 'utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0696352b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from glob import glob\n",
+    "glob('./sosang_store/*csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ade726d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "341aa78c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데이터 확인 및 처리 "
    ]
   }
  ],
