--- a/pivoting.ipynb
+++ b/pivoting.ipynb
@@ -54,6 +54,67 @@
     "- 인덱스, 컬럼, 벨류스가 컬럼으로 있을 때 , 한 컬럼은 인덱스, 한 컬럼은 컬럼, 한 컬럼은 데이터로 \n",
     "- 특정 기준으로 데이터를 재정렬"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94924354",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\"도시\": [\"서울\", \"서울\", \"서울\", \"부산\", \"부산\", \"부산\", \"인천\", \"인천\"],\n",
+    "        \"연도\": [\"2015\", \"2010\", \"2005\", \"2015\", \"2010\", \"2005\", \"2015\", \"2010\"],\n",
+    "        \"인구\": [9904312, 9631482, 9762546, 3448737, 3393191,\n",
+    "               3512547, 2890451, 263203],\n",
+    "        \"지역\": [\"수도권\", \"수도권\", \"수도권\", \"경상권\", \"경상권\", \"경상권\", \"수도권\", \"수도권\"]\n",
+    "}\n",
+    "\n",
+    "#총 8개의 데이터값\n",
+    "\n",
+    "columns = [\"도시\", \"연도\", \"인구\", \"지역\"]\n",
+    "\n",
+    "#컬럼 4개 \n",
+    "\n",
+    "df1 = pd.DataFrame(data, columns=columns)\n",
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f675b266",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.pivot(index='도시', columns='연도', values='인구')\n",
+    "df1 #원본은 그대로 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6dc87072",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/p9/8hvxfvwd1cbfjjyrzwqff47m0000gn/T/ipykernel_3514/2358123961.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#다중 인덱스 형태\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpivot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'지역'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'도시'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'연도'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'인구'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m#지역 순서가 ㄱㄴㄷ 순인지, 데이터 적은 순인지\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#다중 인덱스 형태\n",
+    "df1.pivot(index=['지역','도시'], columns='연도', values='인구')\n",
+    "#지역 순서가 ㄱㄴㄷ 순인지, 데이터 적은 순인지 "
+   ]
   }
  ],
  "metadata": {
