--- a/pivoting.ipynb
+++ b/pivoting.ipynb
@@ -95,7 +95,7 @@
    "execution_count": 1,
    "id": "6dc87072",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -115,6 +115,46 @@
     "df1.pivot(index=['지역','도시'], columns='연도', values='인구')\n",
     "#지역 순서가 ㄱㄴㄷ 순인지, 데이터 적은 순인지 "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bb06126",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.pivot_table(df, index='class', columns='survived', values='age')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c12d2ee3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.pivot_table(df, index=['class','sex'], columns='survived', \n",
+    "               values=['age','fare'], aggfunc=['mean','max'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87d4b57c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.pivot_table(df, index=['class','sex'], columns='survived', \n",
+    "               values=['age','fare'], aggfunc=['mean','min','max'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c24c987c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
